pddoc/txt/parser.out
Created by PLY version 3.6 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> pddoc
Rule 1     pddoc -> pddoc eol
Rule 2     pddoc -> COMMENT_START pdbody COMMENT_END
Rule 3     pdbody -> pdcontent
Rule 4     pdcontent -> line
Rule 5     pdcontent -> line pdcontent
Rule 6     line -> rest_of_line
Rule 7     line -> ASTERISK rest_of_line
Rule 8     rest_of_line -> eol
Rule 9     rest_of_line -> WORD rest_of_line
Rule 10    rest_of_line -> TAG rest_of_line
Rule 11    eol -> EOL

Terminals, with rules where they appear

ASTERISK             : 7
COMMENT_END          : 2
COMMENT_START        : 2
EOL                  : 11
TAG                  : 10
WORD                 : 9
error                : 

Nonterminals, with rules where they appear

eol                  : 1 8
line                 : 4 5
pdbody               : 2
pdcontent            : 3 5
pddoc                : 1 0
rest_of_line         : 6 7 9 10

Parsing method: LALR

state 0

    (0) S' -> . pddoc
    (1) pddoc -> . pddoc eol
    (2) pddoc -> . COMMENT_START pdbody COMMENT_END

    COMMENT_START   shift and go to state 1

    pddoc                          shift and go to state 2

state 1

    (2) pddoc -> COMMENT_START . pdbody COMMENT_END
    (3) pdbody -> . pdcontent
    (4) pdcontent -> . line
    (5) pdcontent -> . line pdcontent
    (6) line -> . rest_of_line
    (7) line -> . ASTERISK rest_of_line
    (8) rest_of_line -> . eol
    (9) rest_of_line -> . WORD rest_of_line
    (10) rest_of_line -> . TAG rest_of_line
    (11) eol -> . EOL

    ASTERISK        shift and go to state 6
    WORD            shift and go to state 3
    TAG             shift and go to state 9
    EOL             shift and go to state 11

    pdcontent                      shift and go to state 5
    eol                            shift and go to state 8
    line                           shift and go to state 10
    pdbody                         shift and go to state 7
    rest_of_line                   shift and go to state 4

state 2

    (0) S' -> pddoc .
    (1) pddoc -> pddoc . eol
    (11) eol -> . EOL

    EOL             shift and go to state 11

    eol                            shift and go to state 12

state 3

    (9) rest_of_line -> WORD . rest_of_line
    (8) rest_of_line -> . eol
    (9) rest_of_line -> . WORD rest_of_line
    (10) rest_of_line -> . TAG rest_of_line
    (11) eol -> . EOL

    WORD            shift and go to state 3
    TAG             shift and go to state 9
    EOL             shift and go to state 11

    eol                            shift and go to state 8
    rest_of_line                   shift and go to state 13

state 4

    (6) line -> rest_of_line .

    ASTERISK        reduce using rule 6 (line -> rest_of_line .)
    WORD            reduce using rule 6 (line -> rest_of_line .)
    TAG             reduce using rule 6 (line -> rest_of_line .)
    EOL             reduce using rule 6 (line -> rest_of_line .)
    COMMENT_END     reduce using rule 6 (line -> rest_of_line .)


state 5

    (3) pdbody -> pdcontent .

    COMMENT_END     reduce using rule 3 (pdbody -> pdcontent .)


state 6

    (7) line -> ASTERISK . rest_of_line
    (8) rest_of_line -> . eol
    (9) rest_of_line -> . WORD rest_of_line
    (10) rest_of_line -> . TAG rest_of_line
    (11) eol -> . EOL

    WORD            shift and go to state 3
    TAG             shift and go to state 9
    EOL             shift and go to state 11

    eol                            shift and go to state 8
    rest_of_line                   shift and go to state 14

state 7

    (2) pddoc -> COMMENT_START pdbody . COMMENT_END

    COMMENT_END     shift and go to state 15


state 8

    (8) rest_of_line -> eol .

    ASTERISK        reduce using rule 8 (rest_of_line -> eol .)
    WORD            reduce using rule 8 (rest_of_line -> eol .)
    TAG             reduce using rule 8 (rest_of_line -> eol .)
    EOL             reduce using rule 8 (rest_of_line -> eol .)
    COMMENT_END     reduce using rule 8 (rest_of_line -> eol .)


state 9

    (10) rest_of_line -> TAG . rest_of_line
    (8) rest_of_line -> . eol
    (9) rest_of_line -> . WORD rest_of_line
    (10) rest_of_line -> . TAG rest_of_line
    (11) eol -> . EOL

    WORD            shift and go to state 3
    TAG             shift and go to state 9
    EOL             shift and go to state 11

    eol                            shift and go to state 8
    rest_of_line                   shift and go to state 16

state 10

    (4) pdcontent -> line .
    (5) pdcontent -> line . pdcontent
    (4) pdcontent -> . line
    (5) pdcontent -> . line pdcontent
    (6) line -> . rest_of_line
    (7) line -> . ASTERISK rest_of_line
    (8) rest_of_line -> . eol
    (9) rest_of_line -> . WORD rest_of_line
    (10) rest_of_line -> . TAG rest_of_line
    (11) eol -> . EOL

    COMMENT_END     reduce using rule 4 (pdcontent -> line .)
    ASTERISK        shift and go to state 6
    WORD            shift and go to state 3
    TAG             shift and go to state 9
    EOL             shift and go to state 11

    line                           shift and go to state 10
    eol                            shift and go to state 8
    pdcontent                      shift and go to state 17
    rest_of_line                   shift and go to state 4

state 11

    (11) eol -> EOL .

    ASTERISK        reduce using rule 11 (eol -> EOL .)
    WORD            reduce using rule 11 (eol -> EOL .)
    TAG             reduce using rule 11 (eol -> EOL .)
    EOL             reduce using rule 11 (eol -> EOL .)
    COMMENT_END     reduce using rule 11 (eol -> EOL .)
    $end            reduce using rule 11 (eol -> EOL .)


state 12

    (1) pddoc -> pddoc eol .

    EOL             reduce using rule 1 (pddoc -> pddoc eol .)
    $end            reduce using rule 1 (pddoc -> pddoc eol .)


state 13

    (9) rest_of_line -> WORD rest_of_line .

    ASTERISK        reduce using rule 9 (rest_of_line -> WORD rest_of_line .)
    WORD            reduce using rule 9 (rest_of_line -> WORD rest_of_line .)
    TAG             reduce using rule 9 (rest_of_line -> WORD rest_of_line .)
    EOL             reduce using rule 9 (rest_of_line -> WORD rest_of_line .)
    COMMENT_END     reduce using rule 9 (rest_of_line -> WORD rest_of_line .)


state 14

    (7) line -> ASTERISK rest_of_line .

    ASTERISK        reduce using rule 7 (line -> ASTERISK rest_of_line .)
    WORD            reduce using rule 7 (line -> ASTERISK rest_of_line .)
    TAG             reduce using rule 7 (line -> ASTERISK rest_of_line .)
    EOL             reduce using rule 7 (line -> ASTERISK rest_of_line .)
    COMMENT_END     reduce using rule 7 (line -> ASTERISK rest_of_line .)


state 15

    (2) pddoc -> COMMENT_START pdbody COMMENT_END .

    EOL             reduce using rule 2 (pddoc -> COMMENT_START pdbody COMMENT_END .)
    $end            reduce using rule 2 (pddoc -> COMMENT_START pdbody COMMENT_END .)


state 16

    (10) rest_of_line -> TAG rest_of_line .

    ASTERISK        reduce using rule 10 (rest_of_line -> TAG rest_of_line .)
    WORD            reduce using rule 10 (rest_of_line -> TAG rest_of_line .)
    TAG             reduce using rule 10 (rest_of_line -> TAG rest_of_line .)
    EOL             reduce using rule 10 (rest_of_line -> TAG rest_of_line .)
    COMMENT_END     reduce using rule 10 (rest_of_line -> TAG rest_of_line .)


state 17

    (5) pdcontent -> line pdcontent .

    COMMENT_END     reduce using rule 5 (pdcontent -> line pdcontent .)

